Migrado a gradle y agregados los tests Unitarios